[gd_scene load_steps=5 format=3 uid="uid://dl22lxek4yc1o"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_vuqsl"]
[ext_resource type="PackedScene" uid="uid://cajx5hu484se3" path="res://scenes/fire.tscn" id="2_icih1"]
[ext_resource type="Texture2D" uid="uid://bvrk2ah2cc3vm" path="res://assets/pillar.png" id="3_1ghws"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cewq5"]
radius = 7.07107

[node name="Player" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_vuqsl")
metadata/_edit_group_ = true

[node name="Pillar" type="Sprite2D" parent="."]
position = Vector2(0, -71)
texture = ExtResource("3_1ghws")
hframes = 4

[node name="Fire" parent="." instance=ExtResource("2_icih1")]
position = Vector2(-1, -172)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_cewq5")

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DelayTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
